[gd_scene load_steps=3 format=3 uid="uid://dkowd61gnvj4o"]

[ext_resource type="Script" path="res://Menu/game_over_menu.gd" id="1_kkbuc"]
[ext_resource type="LabelSettings" uid="uid://fl0bxjanc6m3" path="res://fonts/Tutorial_Style.tres" id="2_r26o1"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kkbuc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1079.0
color = Color(0.351563, 0.351563, 0.351563, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -46.5
offset_right = 143.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "GAME OVER"
label_settings = ExtResource("2_r26o1")

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
